--- a/docs/professor/bruno_garcia_bonfim.mdx
+++ b/docs/professor/bruno_garcia_bonfim.mdx
@@ -21,7 +21,20 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física 4",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2020"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -47,19 +60,6 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Física 4",
-          size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim",
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "EIN2020"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Física I",
           size: 2,
           teachers: [
@@ -82,7 +82,7 @@ const data = {
           size: 2,
           teachers: [
             "Bruno Garcia Bonfim",
-            "Daniele de Almeida Paula"
+            "Débora Hungaro Micheletti"
           ],
           classroom: "Laboratório de Física",
           students: [
