--- a/docs/professor/debora_hungaro_micheletti.mdx
+++ b/docs/professor/debora_hungaro_micheletti.mdx
@@ -73,6 +73,19 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Física 1",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Débora Hungaro Micheletti"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2023"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Eletrônica de Potência",
           size: 2,
           teachers: [
