--- a/docs/professor/fabio_antonio_da_silva.mdx
+++ b/docs/professor/fabio_antonio_da_silva.mdx
@@ -28,7 +28,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55"
+          time: "14:00 - 14:50"
         }
       ]
     },
@@ -45,19 +45,19 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Filosofia 2",
+          subject: "Filosofia 3",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Sala 15-2",
           students: [
-            "EIN2022"
+            "EIN2021"
           ],
-          time: "10:15 - 11:05"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Filosofia I",
@@ -81,19 +81,7 @@ const data = {
           students: [
             "AGO2023"
           ],
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "14:00 - 14:50"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Filosofia II",
@@ -105,7 +93,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Filosofia III",
@@ -125,33 +113,16 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia I",
+          subject: "Filosofia 2",
           size: 1,
           teachers: [
             "Fabio Antônio da Silva"
           ],
-          classroom: "Sala 8",
+          classroom: "Sala 12-2",
           students: [
-            "IIW2023B"
+            "EIN2022"
           ],
-          time: "11:05 - 11:55"
-        }
-      ]
-    },
-    {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Filosofia 3",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
-          ],
-          classroom: "Sala 15-2",
-          students: [
-            "EIN2021"
-          ],
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Filosofia 4",
@@ -163,7 +134,7 @@ const data = {
           students: [
             "EIN2020"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Filosofia I",
@@ -175,13 +146,41 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "13:10 - 14:00"
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
+      dayName: "Quinta-Feira",
+      dayClasses: []
+    },
+    {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15"
+        },
         {
           subject: "Filosofia II",
           size: 1,
@@ -192,7 +191,7 @@ const data = {
           students: [
             "IIW2022B"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Sociologia I",
