--- a/docs/professor/guilherme_de_loreno.mdx
+++ b/docs/professor/guilherme_de_loreno.mdx
@@ -8,7 +8,7 @@ const data = {
       dayClasses: [
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -19,8 +19,20 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "11:05 - 11:55"
+        },
+        {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -29,6 +41,18 @@ const data = {
             "IIW2022B"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -61,7 +85,7 @@ const data = {
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -72,8 +96,20 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -82,12 +118,65 @@ const data = {
             "IIW2022B"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "11:05 - 11:55"
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "Matemática 4",
+          size: 2,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "EIN2020"
+          ],
+          time: "10:15 - 11:05"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Matemática 2",
+          size: 2,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "EIN2022"
+          ],
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática 4",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 3-1",
+          students: [
+            "EIN2020"
+          ],
+          time: "09:25 - 10:15"
+        },
         {
           subject: "Fundamentos da Matemática",
           size: 2,
@@ -115,37 +204,8 @@ const data = {
       ]
     },
     {
-      dayName: "Quinta-Feira",
-      dayClasses: []
-    },
-    {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Matemática 4",
-          size: 2,
-          teachers: [
-            "Guilherme de Loreno"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "EIN2020"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Matemática 4",
-          size: 1,
-          teachers: [
-            "Guilherme de Loreno"
-          ],
-          classroom: "Sala 3-1",
-          students: [
-            "EIN2020"
-          ],
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
