--- a/docs/professor/josiane_paula_maltauro.mdx
+++ b/docs/professor/josiane_paula_maltauro.mdx
@@ -19,6 +19,18 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
+          subject: "Cultura e Cinema Nacional II",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "13:10 - 14:00"
+        },
+        {
           subject: "Cultura e Cinema Nacional III",
           size: 2,
           teachers: [
@@ -75,20 +87,7 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Cultura e Cinema Nacional II",
-          size: 1,
-          teachers: [
-            "Josiane Paula Maltauro"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
