--- a/docs/professor/milton_aparecido_azevedo.mdx
+++ b/docs/professor/milton_aparecido_azevedo.mdx
@@ -38,7 +38,20 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "História I",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "11:05 - 11:55"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -53,7 +66,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "14:00 - 14:50"
+          time: "11:05 - 11:55"
         },
         {
           subject: "História II",
@@ -85,30 +98,6 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "História I",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 8",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 6",
-          students: [
-            "IIW2022B"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "História II",
           size: 1,
           teachers: [
@@ -119,6 +108,18 @@ const data = {
             "IIW2022B"
           ],
           time: "08:20 - 09:10"
+        },
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     }
