--- a/docs/professor/roberto_haruyoshi_ito.mdx
+++ b/docs/professor/roberto_haruyoshi_ito.mdx
@@ -58,6 +58,18 @@ const data = {
             "AGR2023"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Zootecnia Geral",
+          size: 2,
+          teachers: [
+            "Roberto Haruyoshi Ito"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "13:10 - 14:00"
         }
       ]
     },
@@ -84,20 +96,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Zootecnia Geral",
-          size: 2,
-          teachers: [
-            "Roberto Haruyoshi Ito"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
