--- a/docs/sala/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/laboratorio_de_computacao_aplicada.mdx
@@ -26,20 +26,7 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Computação Aplicada",
-          students: [
-            "IIW2022A"
-          ],
-          time: "07:30 - 08:20"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
@@ -55,6 +42,18 @@ const data = {
             "IIW2021"
           ],
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Administração de Sistemas Operacionais e Redes",
+          size: 2,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: [
+            "IIW2022A"
+          ],
+          time: "15:05 - 15:55"
         }
       ]
     },
