--- a/docs/sala/laboratorio_de_fisica.mdx
+++ b/docs/sala/laboratorio_de_fisica.mdx
@@ -7,18 +7,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Física I",
-          size: 2,
-          teachers: [
-            "Polyanna Guimarães e Miranda"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "AGO2023"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Física II",
           size: 2,
           teachers: [
@@ -28,7 +16,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "13:10 - 14:00"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Física III",
@@ -58,7 +46,20 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Física 4",
+          size: 2,
+          teachers: [
+            "Bruno Garcia Bonfim",
+            "Wylliam Salviano Gongora"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "EIN2020"
+          ],
+          time: "10:15 - 11:05"
         },
         {
           subject: "Física I",
@@ -68,7 +69,7 @@ const data = {
           ],
           classroom: "Laboratório de Física",
           students: [
-            "IIW2023A"
+            "AGO2023"
           ],
           time: "15:05 - 15:55"
         },
@@ -113,25 +114,24 @@ const data = {
             "EIN2021"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Física I",
+          size: 2,
+          teachers: [
+            "Polyanna Guimarães e Miranda"
+          ],
+          classroom: "Laboratório de Física",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
       dayClasses: [
-        {
-          subject: "Física 4",
-          size: 2,
-          teachers: [
-            "Bruno Garcia Bonfim",
-            "Wylliam Salviano Gongora"
-          ],
-          classroom: "Laboratório de Física",
-          students: [
-            "EIN2020"
-          ],
-          time: "10:15 - 11:05"
-        },
         {
           subject: "Física I",
           size: 2,
@@ -155,7 +155,7 @@ const data = {
           size: 2,
           teachers: [
             "Bruno Garcia Bonfim",
-            "Daniele de Almeida Paula"
+            "Débora Hungaro Micheletti"
           ],
           classroom: "Laboratório de Física",
           students: [
