--- a/docs/sala/sala_11-2.mdx
+++ b/docs/sala/sala_11-2.mdx
@@ -28,7 +28,31 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55"
+          time: "14:00 - 14:50"
+        },
+        {
+          subject: "Geografia II",
+          size: 1,
+          teachers: [
+            "Jhones Donizetti Mendes"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Cultura e Cinema Nacional II",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "13:10 - 14:00"
         },
         {
           subject: "Instalações elétricas",
@@ -43,16 +67,16 @@ const data = {
           time: "21:00 - 21:50"
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
+          subject: "Meteorologia e Bioclimatologia na Agropecuária",
           size: 2,
           teachers: [
-            "Pedro Leites Junior"
+            "Octavio Henrique Viana"
           ],
           classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -64,7 +88,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "11:05 - 11:55"
+          time: "15:05 - 15:55"
         }
       ]
     },
@@ -81,7 +105,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Equipamentos elétricos e Sistema elétricos de potência",
@@ -94,18 +118,6 @@ const data = {
             "ELE2022"
           ],
           time: "21:00 - 21:50"
-        },
-        {
-          subject: "Geografia II",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
         },
         {
           subject: "Geografia II",
@@ -156,16 +168,28 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Artes II",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "15:05 - 15:55"
         },
         {
           subject: "História I",
@@ -177,13 +201,25 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "Construções e Instalações Rurais",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Sistemas Agroflorestais",
           size: 2,
@@ -221,40 +257,16 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Cultura e Cinema Nacional II",
+          subject: "Artes II",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Renata Carolina Pereira"
           ],
           classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Artes II",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Artes II",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "11:05 - 11:55"
         }
       ]
     },
@@ -263,7 +275,7 @@ const data = {
       dayClasses: [
         {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -271,7 +283,19 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "14:00 - 14:50"
         },
         {
           subject: "Química II",
@@ -283,7 +307,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "13:10 - 14:00"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Culturas I",
@@ -314,18 +338,6 @@ const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Construções e Instalações Rurais",
-          size: 2,
-          teachers: [
-            "Elias Franco"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
-        },
         {
           subject: "História I",
           size: 1,
