--- a/docs/sala/sala_6.mdx
+++ b/docs/sala/sala_6.mdx
@@ -32,7 +32,7 @@ const data = {
         },
         {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -41,6 +41,18 @@ const data = {
             "IIW2022B"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "08:20 - 09:10"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -97,7 +109,7 @@ const data = {
         },
         {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -106,6 +118,18 @@ const data = {
             "IIW2022B"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -180,18 +204,6 @@ const data = {
           students: [
             "IIW2022B"
           ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 6",
-          students: [
-            "IIW2022B"
-          ],
           time: "07:30 - 08:20"
         },
         {
@@ -205,6 +217,18 @@ const data = {
             "IIW2022B"
           ],
           time: "08:20 - 09:10"
+        },
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     }
