--- a/docs/sala/sala_7-2.mdx
+++ b/docs/sala/sala_7-2.mdx
@@ -16,19 +16,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática 1",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -45,7 +33,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "07:30 - 08:20"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Comunicação e Expressão",
@@ -60,18 +48,6 @@ const data = {
           time: "19:00 - 19:50"
         },
         {
-          subject: "Lingua Portuguesa 1",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Artes 1",
           size: 1,
           teachers: [
@@ -81,7 +57,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         },
         {
           subject: "História 1",
@@ -94,6 +70,18 @@ const data = {
             "EIN2023"
           ],
           time: "11:05 - 11:55"
+        },
+        {
+          subject: "Matemática 1",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -105,6 +93,47 @@ const data = {
           size: 2,
           teachers: [
             "Darlan Roque Dapieve"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quinta-Feira",
+      dayClasses: [
+        {
+          subject: "Sociologia 1",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Lingua Portuguesa 1",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Lingua Estrangeira Moderna - Espanhol",
+          size: 1,
+          teachers: [
+            "Michelli Cristina Galli"
           ],
           classroom: "Sala 7-2",
           students: [
@@ -139,38 +168,8 @@ const data = {
       ]
     },
     {
-      dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Lingua Estrangeira Moderna - Espanhol",
-          size: 1,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "08:20 - 09:10"
-        }
-      ]
-    },
-    {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia 1",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
