--- a/docs/sala/sala_8.mdx
+++ b/docs/sala/sala_8.mdx
@@ -32,7 +32,7 @@ const data = {
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -41,6 +41,18 @@ const data = {
             "IIW2023B"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura I",
@@ -85,7 +97,7 @@ const data = {
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -94,6 +106,18 @@ const data = {
             "IIW2023B"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "08:20 - 09:10"
         },
         {
           subject: "Língua Portuguesa e Literatura I",
@@ -113,10 +137,10 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Filosofia I",
+          subject: "História I",
           size: 1,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Milton Aparecido Azevedo"
           ],
           classroom: "Sala 8",
           students: [
@@ -171,6 +195,18 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Sociologia I",
           size: 2,
           teachers: [
@@ -181,18 +217,6 @@ const data = {
             "IIW2023B"
           ],
           time: "10:15 - 11:05"
-        },
-        {
-          subject: "História I",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 8",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15"
         }
       ]
     }
