--- a/docs/turma/ago2022.mdx
+++ b/docs/turma/ago2022.mdx
@@ -7,18 +7,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Educação Física II",
-          size: 2,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Filosofia II",
           size: 1,
           teachers: [
@@ -28,19 +16,43 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55"
+          time: "14:00 - 14:50"
         },
         {
-          subject: "Língua Portuguesa e Literatura II",
-          size: 2,
+          subject: "Geografia II",
+          size: 1,
           teachers: [
-            "Pedro Leites Junior"
+            "Jhones Donizetti Mendes"
           ],
           classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Cultura e Cinema Nacional II",
+          size: 1,
+          teachers: [
+            "Josiane Paula Maltauro"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          size: 2,
+          teachers: [
+            "Octavio Henrique Viana"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "07:30 - 08:20"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -52,7 +64,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "11:05 - 11:55"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Física II",
@@ -64,7 +76,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "13:10 - 14:00"
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -81,19 +93,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Geografia II",
-          size: 1,
-          teachers: [
-            "Jhones Donizetti Mendes"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Geografia II",
@@ -132,16 +132,28 @@ const data = {
           time: "15:55 - 16:45"
         },
         {
-          subject: "Meteorologia e Bioclimatologia na Agropecuária",
+          subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
-            "Octavio Henrique Viana"
+            "Pedro Leites Junior"
           ],
           classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Artes II",
+          size: 1,
+          teachers: [
+            "Renata Carolina Pereira"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "15:05 - 15:55"
         },
         {
           subject: "História I",
@@ -153,13 +165,25 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         }
       ]
     },
     {
       dayName: "Quarta-Feira",
       dayClasses: [
+        {
+          subject: "Construções e Instalações Rurais",
+          size: 2,
+          teachers: [
+            "Elias Franco"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Sistemas Agroflorestais",
           size: 2,
@@ -173,40 +197,16 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Cultura e Cinema Nacional II",
+          subject: "Artes II",
           size: 1,
           teachers: [
-            "Josiane Paula Maltauro"
+            "Renata Carolina Pereira"
           ],
           classroom: "Sala 11-2",
           students: [
             "AGO2022"
           ],
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Artes II",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "10:15 - 11:05"
-        },
-        {
-          subject: "Artes II",
-          size: 1,
-          teachers: [
-            "Renata Carolina Pereira"
-          ],
-          classroom: "Sala 11-2",
-          students: [
-            "AGO2022"
-          ],
-          time: "11:05 - 11:55"
         }
       ]
     },
@@ -215,7 +215,7 @@ const data = {
       dayClasses: [
         {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -223,7 +223,19 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "14:00 - 14:50"
         },
         {
           subject: "Química II",
@@ -235,7 +247,7 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "13:10 - 14:00"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Biologia II",
@@ -279,12 +291,12 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Construções e Instalações Rurais",
+          subject: "Educação Física II",
           size: 2,
           teachers: [
-            "Elias Franco"
+            "Bruna Valeriano da Silva Lisboa"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Educação Física / Sala 4 B2",
           students: [
             "AGO2022"
           ],
