--- a/docs/turma/iiw2023a.mdx
+++ b/docs/turma/iiw2023a.mdx
@@ -7,18 +7,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Educação Física I",
-          size: 2,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
           subject: "Lingua estrangeira - Inglês",
           size: 1,
           teachers: [
@@ -28,11 +16,11 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -40,7 +28,31 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Biologia I",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
@@ -60,8 +72,20 @@ const data = {
           time: "13:10 - 14:00"
         },
         {
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -69,7 +93,72 @@ const data = {
           students: [
             "IIW2023A"
           ],
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:55 - 16:45"
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Linguagens de apresentação e estruturação de conteúdos",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Educação Física I",
+          size: 2,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "Educação Física / Sala 4 B2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "07:30 - 08:20"
         },
         {
           subject: "Filosofia I",
@@ -93,60 +182,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "15:05 - 15:55"
-        },
-        {
-          subject: "Linguagens de apresentação e estruturação de conteúdos",
-          size: 2,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Biologia I",
-          size: 2,
-          teachers: [
-            "Leandro Luiz Borges"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05"
         }
       ]
     },
@@ -163,7 +199,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Lógica de programação",
@@ -178,22 +214,10 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Lingua estrangeira - Inglês",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
+            "Michelli Cristina Galli"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -211,7 +235,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "14:00 - 14:50"
+          time: "11:05 - 11:55"
         },
         {
           subject: "Linguagens de apresentação e estruturação de conteúdos",
