--- a/docs/turma/iiw2023b.mdx
+++ b/docs/turma/iiw2023b.mdx
@@ -56,7 +56,7 @@ const data = {
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -65,6 +65,18 @@ const data = {
             "IIW2023B"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura I",
@@ -121,7 +133,7 @@ const data = {
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -130,6 +142,18 @@ const data = {
             "IIW2023B"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "08:20 - 09:10"
         },
         {
           subject: "Língua Portuguesa e Literatura I",
@@ -161,10 +185,10 @@ const data = {
           time: "07:30 - 08:20"
         },
         {
-          subject: "Filosofia I",
+          subject: "História I",
           size: 1,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Milton Aparecido Azevedo"
           ],
           classroom: "Sala 8",
           students: [
@@ -231,6 +255,18 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
+          subject: "Filosofia I",
+          size: 1,
+          teachers: [
+            "Fabio Antônio da Silva"
+          ],
+          classroom: "Sala 8",
+          students: [
+            "IIW2023B"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Sociologia I",
           size: 2,
           teachers: [
@@ -253,18 +289,6 @@ const data = {
             "IIW2023B"
           ],
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "História I",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 8",
-          students: [
-            "IIW2023B"
-          ],
-          time: "09:25 - 10:15"
         }
       ]
     }
