--- a/docs/professor/elenice_josefa_kolancko_setti.mdx
+++ b/docs/professor/elenice_josefa_kolancko_setti.mdx
@@ -8,7 +8,7 @@ const data = {
       dayClasses: [
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -16,23 +16,23 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         },
         {
-          subject: "Matemática II",
-          size: 2,
+          subject: "Matemática I",
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Sala 13-2",
+          classroom: "Sala 9-2",
           students: [
-            "IIW2022A"
+            "IIW2023A"
           ],
           time: "09:25 - 10:15"
         },
         {
           subject: "Matemática III",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -41,6 +41,18 @@ const data = {
             "AGO2021"
           ],
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática III",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "AGO2021"
+          ],
+          time: "14:00 - 14:50"
         }
       ]
     },
@@ -49,7 +61,7 @@ const data = {
       dayClasses: [
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -57,19 +69,43 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "09:25 - 10:15"
+          time: "15:05 - 15:55"
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
-          classroom: "Sala 6-2",
+          classroom: "Sala 9-2",
           students: [
-            "AGO2023"
+            "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "15:55 - 16:45"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "IIW2022A"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "IIW2022A"
+          ],
+          time: "09:25 - 10:15"
         }
       ]
     },
@@ -82,19 +118,7 @@ const data = {
       dayClasses: [
         {
           subject: "Matemática II",
-          size: 2,
-          teachers: [
-            "Elenice Josefa Kolancko Setti"
-          ],
-          classroom: "Sala 13-2",
-          students: [
-            "IIW2022A"
-          ],
-          time: "13:10 - 14:00"
-        },
-        {
-          subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -102,13 +126,74 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "07:30 - 08:20"
+          time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 11-2",
+          students: [
+            "AGO2022"
+          ],
+          time: "14:00 - 14:50"
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "IIW2022A"
+          ],
+          time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 13-2",
+          students: [
+            "IIW2022A"
+          ],
+          time: "11:05 - 11:55"
+        }
+      ]
     }
   ],
   time: [
