--- a/docs/professor/everaldo_lorensetti.mdx
+++ b/docs/professor/everaldo_lorensetti.mdx
@@ -9,20 +9,16 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
-    },
-    {
-      dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 4",
+          subject: "Sociologia 3",
           size: 1,
           teachers: [
             "Everaldo Lorensetti"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Sala 15-2",
           students: [
-            "EIN2020"
+            "EIN2021"
           ],
           time: "07:30 - 08:20"
         },
@@ -37,6 +33,35 @@ const data = {
             "IIW2023A"
           ],
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      dayName: "Quarta-Feira",
+      dayClasses: [
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 6-2",
+          students: [
+            "AGO2023"
+          ],
+          time: "07:30 - 08:20"
         },
         {
           subject: "Sociologia II",
@@ -56,16 +81,16 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 2",
+          subject: "Sociologia 1",
           size: 1,
           teachers: [
             "Everaldo Lorensetti"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Sala 7-2",
           students: [
-            "EIN2022"
+            "EIN2023"
           ],
-          time: "09:25 - 10:15"
+          time: "08:20 - 09:10"
         },
         {
           subject: "Sociologia II",
@@ -85,28 +110,28 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia 1",
+          subject: "Sociologia 2",
           size: 1,
           teachers: [
             "Everaldo Lorensetti"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Sala 12-2",
           students: [
-            "EIN2023"
+            "EIN2022"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Sociologia 3",
+          subject: "Sociologia 4",
           size: 1,
           teachers: [
             "Everaldo Lorensetti"
           ],
-          classroom: "Sala 15-2",
+          classroom: "Sala 2-2",
           students: [
-            "EIN2021"
+            "EIN2020"
           ],
-          time: "10:15 - 11:05"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Sociologia I",
@@ -119,30 +144,6 @@ const data = {
             "IIW2023A"
           ],
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Sociologia I",
-          size: 1,
-          teachers: [
-            "Everaldo Lorensetti"
-          ],
-          classroom: "Sala 6-2",
-          students: [
-            "AGO2023"
-          ],
-          time: "08:20 - 09:10"
         }
       ]
     }
