--- a/docs/professor/octavio_henrique_viana.mdx
+++ b/docs/professor/octavio_henrique_viana.mdx
@@ -41,12 +41,7 @@ const data = {
             "AGO2021"
           ],
           time: "09:25 - 10:15"
-        }
-      ]
-    },
-    {
-      dayName: "Terça-Feira",
-      dayClasses: [
+        },
         {
           subject: "Meteorologia e Bioclimatologia na Agropecuária",
           size: 2,
@@ -57,9 +52,13 @@ const data = {
           students: [
             "AGO2022"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         }
       ]
+    },
+    {
+      dayName: "Terça-Feira",
+      dayClasses: []
     },
     {
       dayName: "Quarta-Feira",
