--- a/docs/professor/sergio_augusto_dias_castro.mdx
+++ b/docs/professor/sergio_augusto_dias_castro.mdx
@@ -7,18 +7,6 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
-          subject: "Matemática 1",
-          size: 2,
-          teachers: [
-            "Sérgio Augusto Dias Castro"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
           subject: "Matemática III",
           size: 2,
           teachers: [
@@ -34,7 +22,20 @@ const data = {
     },
     {
       dayName: "Terça-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Matemática 1",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "07:30 - 08:20"
+        }
+      ]
     },
     {
       dayName: "Quarta-Feira",
