--- a/docs/sala/sala_9-2.mdx
+++ b/docs/sala/sala_9-2.mdx
@@ -16,11 +16,11 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -28,7 +28,19 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "09:25 - 10:15"
         },
         {
           subject: "Instrumentos de Medidas Elétricas",
@@ -41,12 +53,36 @@ const data = {
             "ELM2023"
           ],
           time: "19:00 - 19:50"
+        },
+        {
+          subject: "Biologia I",
+          size: 2,
+          teachers: [
+            "Leandro Luiz Borges"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
         }
       ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Lingua estrangeira - Inglês",
+          size: 1,
+          teachers: [
+            "Celina de Oliveira Barbosa Gomes"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "10:15 - 11:05"
+        },
         {
           subject: "Fundamentos de Matemática",
           size: 2,
@@ -61,9 +97,33 @@ const data = {
         },
         {
           subject: "Matemática I",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:05 - 15:55"
+        },
+        {
+          subject: "Matemática I",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 9-2",
+          students: [
+            "IIW2023A"
+          ],
+          time: "15:55 - 16:45"
+        },
+        {
+          subject: "Sociologia I",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -101,40 +161,16 @@ const data = {
       dayName: "Quarta-Feira",
       dayClasses: [
         {
-          subject: "Sociologia I",
+          subject: "Filosofia I",
           size: 1,
           teachers: [
-            "Everaldo Lorensetti"
+            "Fabio Antônio da Silva"
           ],
           classroom: "Sala 9-2",
           students: [
             "IIW2023A"
           ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Língua Portuguesa e Literatura I",
-          size: 2,
-          teachers: [
-            "Michelli Cristina Galli"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Biologia I",
-          size: 2,
-          teachers: [
-            "Leandro Luiz Borges"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "10:15 - 11:05"
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -142,22 +178,10 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Lingua estrangeira - Inglês",
-          size: 1,
+          subject: "Língua Portuguesa e Literatura I",
+          size: 2,
           teachers: [
-            "Celina de Oliveira Barbosa Gomes"
-          ],
-          classroom: "Sala 9-2",
-          students: [
-            "IIW2023A"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Filosofia I",
-          size: 1,
-          teachers: [
-            "Fabio Antônio da Silva"
+            "Michelli Cristina Galli"
           ],
           classroom: "Sala 9-2",
           students: [
@@ -175,7 +199,7 @@ const data = {
           students: [
             "IIW2023A"
           ],
-          time: "14:00 - 14:50"
+          time: "11:05 - 11:55"
         }
       ]
     },
