--- a/docs/turma/ago2021.mdx
+++ b/docs/turma/ago2021.mdx
@@ -20,7 +20,7 @@ const data = {
         },
         {
           subject: "Matemática III",
-          size: 2,
+          size: 1,
           teachers: [
             "Elenice Josefa Kolancko Setti"
           ],
@@ -29,6 +29,18 @@ const data = {
             "AGO2021"
           ],
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Matemática III",
+          size: 1,
+          teachers: [
+            "Elenice Josefa Kolancko Setti"
+          ],
+          classroom: "Sala 14-2",
+          students: [
+            "AGO2021"
+          ],
+          time: "14:00 - 14:50"
         },
         {
           subject: "Cultura e Cinema Nacional III",
