--- a/docs/turma/ein2022.mdx
+++ b/docs/turma/ein2022.mdx
@@ -7,6 +7,18 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Educação Física 2",
+          size: 1,
+          teachers: [
+            "Bruna Valeriano da Silva Lisboa"
+          ],
+          classroom: "Educação Física / Sala 4 B2",
+          students: [
+            "EIN2022"
+          ],
+          time: "11:05 - 11:55"
+        },
+        {
           subject: "Sistemas Digitais",
           size: 2,
           teachers: [
@@ -16,31 +28,31 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Eletrônica",
-          size: 2,
-          teachers: [
-            "Tiago Henrique dos Santos"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: [
-            "EIN2022"
-          ],
           time: "09:25 - 10:15"
         },
         {
-          subject: "Eletrônica",
+          subject: "Processos de Fabricação 1",
           size: 1,
           teachers: [
-            "Tiago Henrique dos Santos"
+            "Sérgio Takahashi"
           ],
-          classroom: "Laboratório de Eletrônica",
+          classroom: "Laboratório de Usinagem B4",
           students: [
             "EIN2022"
           ],
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
+        },
+        {
+          subject: "Processos de Fabricação 1",
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Usinagem B4",
+          students: [
+            "EIN2022"
+          ],
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -58,15 +70,15 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
-          subject: "Filosofia 2",
-          size: 1,
+          subject: "Química 2",
+          size: 2,
           teachers: [
-            "Fabio Antônio da Silva"
+            "Felipe Augusto Gorla"
           ],
-          classroom: "Sala 12-2",
+          classroom: "Laboratório de Química",
           students: [
             "EIN2022"
           ],
@@ -82,19 +94,19 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "09:25 - 10:15"
+          time: "07:30 - 08:20"
         },
         {
-          subject: "Matemática 2",
-          size: 2,
+          subject: "Lingua Estrangeira Moderna 1 - Inglês",
+          size: 1,
           teachers: [
-            "Mauro César de Souza Siena"
+            "Kátia Cristiane Kobus Novaes"
           ],
-          classroom: "Sala 3-1",
+          classroom: "Sala 12-2",
           students: [
             "EIN2022"
           ],
-          time: "07:30 - 08:20"
+          time: "08:20 - 09:10"
         }
       ]
     },
@@ -111,19 +123,19 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
-          subject: "Biologia 2",
+          subject: "Filosofia 2",
           size: 1,
           teachers: [
-            "Eliana Peliçon Pereira Figueira"
+            "Fabio Antônio da Silva"
           ],
           classroom: "Sala 12-2",
           students: [
             "EIN2022"
           ],
-          time: "11:05 - 11:55"
+          time: "09:25 - 10:15"
         },
         {
           subject: "Artes 2",
@@ -155,17 +167,46 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
-          subject: "Química 2",
+          subject: "Matemática 2",
           size: 2,
           teachers: [
-            "Felipe Augusto Gorla"
+            "Guilherme de Loreno"
           ],
-          classroom: "Laboratório de Química",
+          classroom: "Sala 3-1",
           students: [
             "EIN2022"
           ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
+        {
+          subject: "Eletrônica",
+          size: 2,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
+          classroom: "Laboratório de Eletrônica",
+          students: [
+            "EIN2022"
+          ],
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Eletrônica",
+          size: 1,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
+          classroom: "Laboratório de Eletrônica",
+          students: [
+            "EIN2022"
+          ],
+          time: "11:05 - 11:55"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Sociologia 2",
           size: 1,
@@ -176,60 +217,7 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Processos de Fabricação 1",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: [
-            "EIN2022"
-          ],
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Processos de Fabricação 1",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Usinagem B4",
-          students: [
-            "EIN2022"
-          ],
-          time: "08:20 - 09:10"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Educação Física 2",
-          size: 1,
-          teachers: [
-            "Bruna Valeriano da Silva Lisboa"
-          ],
-          classroom: "Educação Física / Sala 4 B2",
-          students: [
-            "EIN2022"
-          ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Lingua Estrangeira Moderna 1 - Inglês",
-          size: 1,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 12-2",
-          students: [
-            "EIN2022"
-          ],
-          time: "11:05 - 11:55"
         },
         {
           subject: "Lingua Portuguesa 2",
@@ -244,6 +232,18 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
+          subject: "Biologia 2",
+          size: 1,
+          teachers: [
+            "Eliana Peliçon Pereira Figueira"
+          ],
+          classroom: "Sala 12-2",
+          students: [
+            "EIN2022"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
           subject: "História 2",
           size: 1,
           teachers: [
@@ -253,7 +253,7 @@ const data = {
           students: [
             "EIN2022"
           ],
-          time: "08:20 - 09:10"
+          time: "11:05 - 11:55"
         }
       ]
     }
