--- a/docs/turma/ein2023.mdx
+++ b/docs/turma/ein2023.mdx
@@ -16,19 +16,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Biologia 1",
-          size: 1,
-          teachers: [
-            "Eliana Peliçon Pereira Figueira"
-          ],
-          classroom: "Laboratório de Biologia",
-          students: [
-            "EIN2023"
-          ],
-          time: "10:15 - 11:05"
+          time: "07:30 - 08:20"
         },
         {
           subject: "Geografia 1",
@@ -40,19 +28,55 @@ const data = {
           students: [
             "EIN2023"
           ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Desenho Técnico",
+          size: 2,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          students: [
+            "EIN2023 - Grupo B"
+          ],
           time: "09:25 - 10:15"
         },
         {
-          subject: "Matemática 1",
+          subject: "Desenho Técnico",
+          size: 1,
+          teachers: [
+            "Sérgio Takahashi"
+          ],
+          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
+          students: [
+            "EIN2023 - Grupo B"
+          ],
+          time: "11:05 - 11:55"
+        },
+        {
+          subject: "Eletricidade e Medidas Elétricas",
           size: 2,
           teachers: [
-            "Sérgio Augusto Dias Castro"
+            "Tiago Henrique dos Santos"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Laboratório de Eletrônica",
           students: [
-            "EIN2023"
+            "EIN2023 - Grupo A"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Eletricidade e Medidas Elétricas",
+          size: 1,
+          teachers: [
+            "Tiago Henrique dos Santos"
+          ],
+          classroom: "Laboratório de Eletrônica",
+          students: [
+            "EIN2023 - Grupo A"
+          ],
+          time: "11:05 - 11:55"
         }
       ]
     },
@@ -69,19 +93,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "07:30 - 08:20"
-        },
-        {
-          subject: "Lingua Portuguesa 1",
-          size: 2,
-          teachers: [
-            "Kátia Cristiane Kobus Novaes"
-          ],
-          classroom: "Sala 7-2",
-          students: [
-            "EIN2023"
-          ],
-          time: "09:25 - 10:15"
+          time: "10:15 - 11:05"
         },
         {
           subject: "Artes 1",
@@ -93,7 +105,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "08:20 - 09:10"
+          time: "09:25 - 10:15"
         },
         {
           subject: "História 1",
@@ -106,6 +118,18 @@ const data = {
             "EIN2023"
           ],
           time: "11:05 - 11:55"
+        },
+        {
+          subject: "Matemática 1",
+          size: 2,
+          teachers: [
+            "Sérgio Augusto Dias Castro"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -132,7 +156,7 @@ const data = {
           ],
           classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: [
-            "EIN2023 - Grupo B"
+            "EIN2023 - Grupo A"
           ],
           time: "09:25 - 10:15"
         },
@@ -144,7 +168,7 @@ const data = {
           ],
           classroom: "Laboratório de Desenho Técnico / Sala 5-2",
           students: [
-            "EIN2023 - Grupo B"
+            "EIN2023 - Grupo A"
           ],
           time: "11:05 - 11:55"
         },
@@ -156,7 +180,7 @@ const data = {
           ],
           classroom: "Laboratório de Eletrônica",
           students: [
-            "EIN2023 - Grupo A"
+            "EIN2023 - Grupo B"
           ],
           time: "09:25 - 10:15"
         },
@@ -168,7 +192,7 @@ const data = {
           ],
           classroom: "Laboratório de Eletrônica",
           students: [
-            "EIN2023 - Grupo A"
+            "EIN2023 - Grupo B"
           ],
           time: "11:05 - 11:55"
         }
@@ -187,7 +211,31 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "07:30 - 08:20"
+          time: "09:25 - 10:15"
+        },
+        {
+          subject: "Sociologia 1",
+          size: 1,
+          teachers: [
+            "Everaldo Lorensetti"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "08:20 - 09:10"
+        },
+        {
+          subject: "Lingua Portuguesa 1",
+          size: 2,
+          teachers: [
+            "Kátia Cristiane Kobus Novaes"
+          ],
+          classroom: "Sala 7-2",
+          students: [
+            "EIN2023"
+          ],
+          time: "10:15 - 11:05"
         },
         {
           subject: "Lingua Estrangeira Moderna - Espanhol",
@@ -199,55 +247,7 @@ const data = {
           students: [
             "EIN2023"
           ],
-          time: "08:20 - 09:10"
-        },
-        {
-          subject: "Desenho Técnico",
-          size: 2,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: [
-            "EIN2023 - Grupo A"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Desenho Técnico",
-          size: 1,
-          teachers: [
-            "Sérgio Takahashi"
-          ],
-          classroom: "Laboratório de Desenho Técnico / Sala 5-2",
-          students: [
-            "EIN2023 - Grupo A"
-          ],
-          time: "11:05 - 11:55"
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas",
-          size: 2,
-          teachers: [
-            "Tiago Henrique dos Santos"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: [
-            "EIN2023 - Grupo B"
-          ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "Eletricidade e Medidas Elétricas",
-          size: 1,
-          teachers: [
-            "Tiago Henrique dos Santos"
-          ],
-          classroom: "Laboratório de Eletrônica",
-          students: [
-            "EIN2023 - Grupo B"
-          ],
-          time: "11:05 - 11:55"
+          time: "07:30 - 08:20"
         }
       ]
     },
@@ -259,7 +259,7 @@ const data = {
           size: 2,
           teachers: [
             "Bruno Garcia Bonfim",
-            "Daniele de Almeida Paula"
+            "Débora Hungaro Micheletti"
           ],
           classroom: "Laboratório de Física",
           students: [
@@ -268,12 +268,12 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Sociologia 1",
+          subject: "Biologia 1",
           size: 1,
           teachers: [
-            "Everaldo Lorensetti"
+            "Eliana Peliçon Pereira Figueira"
           ],
-          classroom: "Sala 7-2",
+          classroom: "Laboratório de Biologia",
           students: [
             "EIN2023"
           ],
