--- a/docs/turma/iiw2022b.mdx
+++ b/docs/turma/iiw2022b.mdx
@@ -44,7 +44,7 @@ const data = {
         },
         {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -53,6 +53,18 @@ const data = {
             "IIW2022B"
           ],
           time: "07:30 - 08:20"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "08:20 - 09:10"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -121,7 +133,7 @@ const data = {
         },
         {
           subject: "Matemática II",
-          size: 2,
+          size: 1,
           teachers: [
             "Guilherme de Loreno"
           ],
@@ -130,6 +142,18 @@ const data = {
             "IIW2022B"
           ],
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Matemática II",
+          size: 1,
+          teachers: [
+            "Guilherme de Loreno"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "11:05 - 11:55"
         },
         {
           subject: "Língua Portuguesa e Literatura II",
@@ -252,18 +276,6 @@ const data = {
           students: [
             "IIW2022B"
           ],
-          time: "09:25 - 10:15"
-        },
-        {
-          subject: "História II",
-          size: 1,
-          teachers: [
-            "Milton Aparecido Azevedo"
-          ],
-          classroom: "Sala 6",
-          students: [
-            "IIW2022B"
-          ],
           time: "07:30 - 08:20"
         },
         {
@@ -277,6 +289,18 @@ const data = {
             "IIW2022B"
           ],
           time: "08:20 - 09:10"
+        },
+        {
+          subject: "História II",
+          size: 1,
+          teachers: [
+            "Milton Aparecido Azevedo"
+          ],
+          classroom: "Sala 6",
+          students: [
+            "IIW2022B"
+          ],
+          time: "09:25 - 10:15"
         },
         {
           subject: "Desenvolvimento WEB Orientado a Objetos",
